2.81 - On Texture Paint the UV Map doesnt show up on the left viewport as it does on 2.80 #70206

Closed
opened 2019-09-24 16:25:29 +02:00 by Leonel Faria · 14 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-23 20:20, hash: 5a6ab6f594
Worked: version 2.80 (latest stable release)

Short description of error
I don't know if it is supposed to be this way, but on blender 2.80 when we switch to Texture Paint we can see the UVUnraped on the left side and on blender 2.81 I can't figure out how to make it show as on the 2.80

Exact steps for others to reproduce the error
Add a Cube, confirm it is unwraped on Uv Editing, change to Texture Paint

Screenshot from Blender 2.80: https://i.imgur.com/PsLPQZR.jpg
Screenshot from Blender 2.81: https://i.imgur.com/60eywqx.jpg

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-23 20:20, hash: `5a6ab6f594` Worked: version 2.80 (latest stable release) **Short description of error** I don't know if it is supposed to be this way, but on blender 2.80 when we switch to Texture Paint we can see the UVUnraped on the left side and on blender 2.81 I can't figure out how to make it show as on the 2.80 **Exact steps for others to reproduce the error** Add a Cube, confirm it is unwraped on Uv Editing, change to Texture Paint Screenshot from Blender 2.80: https://i.imgur.com/PsLPQZR.jpg Screenshot from Blender 2.81: https://i.imgur.com/60eywqx.jpg
Author

Added subscriber: @leonelf

Added subscriber: @leonelf

#69725 was marked as duplicate of this issue

#69725 was marked as duplicate of this issue
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

Added subscriber: @Alumx

Added subscriber: @Alumx

Are you using the same startup file from 2.80?
I had similar problem in 2.81 and creating a new startup file from scratch seemed to fix it

Are you using the same startup file from 2.80? I had similar problem in 2.81 and creating a new startup file from scratch seemed to fix it
Author

In #70206#783725, @Alumx wrote:
Are you using the same startup file from 2.80?
I had similar problem in 2.81 and creating a new startup file from scratch seemed to fix it

I have installed 2.81 side by side with 2.80

Installation Paths
2.80 -> "C:\Program Files\Blender Foundation\Blender"
2.81 -> "C:\Program Files\Blender Foundation\Blender 2.81"
> In #70206#783725, @Alumx wrote: > Are you using the same startup file from 2.80? > I had similar problem in 2.81 and creating a new startup file from scratch seemed to fix it I have installed 2.81 side by side with 2.80 ``` Installation Paths 2.80 -> "C:\Program Files\Blender Foundation\Blender" 2.81 -> "C:\Program Files\Blender Foundation\Blender 2.81" ```
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

I can actually reproduce it (and deleting my config folder -- so a new startup file gets created -- doesnt fix it...)
Checking...

I can actually reproduce it (and deleting my `config` folder -- so a new startup file gets created -- doesnt fix it...) Checking...
Clément Foucault was assigned by Philipp Oeser 2019-09-25 18:59:38 +02:00
Member

For me, this can be bisected down to 9c010c44f4.

@Alumx: are you sure you have this running in a fresh build from https:/builder.blender.org?

Anyways, will mark this as High prio (since it is a regression...)

For me, this can be bisected down to 9c010c44f4. @Alumx: are you sure you have this running in a fresh build from https:/builder.blender.org? Anyways, will mark this as High prio (since it is a regression...)

@lichtwerk yep! I'm using latest build (version: 2.81 (sub 12), branch: master, commit date: 2019-09-25 13:57, hash: f8da7218be)

And I meant that this problem ocurred when I imported a my own default startup file from 2.80 into 2.81 for the first time, the UV's map weren't displaying correctly (I think if you zoom in and out in UV editor, the UV map of cube may glitch and appear/disappear randomly)

the fix for me was to start load default starting scene, where the UV maps worked accordingly

2019-09-25 18-13-06.mp4

@lichtwerk yep! I'm using latest build *(version: 2.81 (sub 12), branch: master, commit date: 2019-09-25 13:57, hash: `f8da7218be`)* And I meant that this problem ocurred when I imported a my own default startup file from 2.80 into 2.81 for the first time, the UV's map weren't displaying correctly (I think if you zoom in and out in UV editor, the UV map of cube may glitch and appear/disappear randomly) the fix for me was to start load default starting scene, where the UV maps worked accordingly [2019-09-25 18-13-06.mp4](https://archive.blender.org/developer/F7774919/2019-09-25_18-13-06.mp4)
Author

@Alumx I think you are confusing the UV Editor with the Texture Paint

Look at this video recorded with the latest build:
version: 2.81 (sub 12), branch: master, commit date: 2019-09-25 13:57, hash: f8da7218be, type: Release
build date: 2019-09-25, 14:08:40

2019-09-25_20-14-40.mp4

On blender 2.80 when you go to Texture Paint you can see the UV map on the left viewport.

@Alumx I think you are confusing the UV Editor with the Texture Paint Look at this video recorded with the latest build: version: 2.81 (sub 12), branch: master, commit date: 2019-09-25 13:57, hash: f8da7218be13, type: Release build date: 2019-09-25, 14:08:40 [2019-09-25_20-14-40.mp4](https://archive.blender.org/developer/F7775067/2019-09-25_20-14-40.mp4) On blender 2.80 when you go to Texture Paint you can see the UV map on the left viewport.

This issue was referenced by 574265f52f

This issue was referenced by 574265f52fa2967c41b11916ba327e85ac68d03f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @VGT, @fclem, @mano-wii

Added subscribers: @VGT, @fclem, @mano-wii
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70206
No description provided.