Fix T70206 Texture Paint: UV shadow doesnt show up